 - added support of encoding parameter for log[] and eventlog[] (Alexei)
 - fixed displaying of Japanese in the Latest Data (Alexei)
 - fixed maintenance of hosts (Alexei)
 - added support of remote agent control (Alexei)
 - support of storage of log files in UTF8 encoding (Alexei)
 - increased size of triggers.expression to 1023 (Alexei)

Changes for 1.4.3:

 - [ZBX-77] fixes for refreshing page in Monitoring (Artem)
 - [ZBX-75] fixed problem with occured warning in events (Artem)
 - [ZBX-68] fixed iframe resize on refresh in Screens (Artem)
 - [ZBX-65] fixed sideeffect on massupdate items, 'application' entries are cleaned from all affected items" (Artem)
 - fixed setting trigger status to unknown on trigger update, now only if expression is changed (Artem)
 - fixed problem with Enabling/Disabling actions (Artem)
 - [ZBX-72] fixed occured error after graph refresh (Artem)
 - [ZBX-67] Under DM, Synchronizing binary data between nodes (Sasha)
 - [ZBX-71] added separation of "other" by node and host in "latest data" (Artem)
 - [ZBX-70] fixed even more compilation warnings (Alexei)
 - [ZBX-69] eliminated compilation warnings "_GNU_SOURCE redefined" (Alexei)
 - [ZBX-1] fixed wrong status of function "nodata" after server restart (Sasha)
 - [ZBX-33] fixed problem in table names in data.sql for PostgreSQL (Sasha)
 - [ZBX-32] fixed incorrect processing of IP ranges in ip_in_list (Sasha)
 - [ZBX-35] fixed processing of PROFILE related macros (Alexei)
 - support of macro {ITEM.LASTVALUE} for notifications and trigger names (Alexei)
 - fixed SQL statement in SLA processing. Thanks to Aron Ujvari. (Alexei)
 - updated Spanish translation. Thanks to Ignacio Martin. (Alexei) 
 - [ZBX-24] fixed Queue to show status of current node only (Alexei)
 - support of encoding of log files to displayed encoding (Alexei)
 - [ZBX-12] fixed calculations in ZABBIX availability report (Alexei)
 - [ZBX-11] fixed Free BSD 4.x 64 bit-related issues (Alexei)